--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -83,7 +83,7 @@
                             <div class="form-group">
                               <label class="control-label col-md-2">Name</label>
                               <div class="col-md-10">
-                                <input autofocus ng-model="account.name" placeholder="{{_('Type here the company name of your customer,parnter,investor...')}}" type="text" class="form-control">
+                                <input autofocus ng-model="account.name" placeholder="{{_('Type here the company name of your customer,parnter...')}}" type="text" class="form-control">
                               </div>
                             </div>
                           </div>
@@ -274,17 +274,7 @@
                                 
                                                     
                               </div>
-                              <div class="news-blocks blank-card blank-card-yellow">
-                                <h3>Who can access ?</h3>
-                                  <label class="radio line">
-                                        <input type="radio" value="public" ng-model="account.access" />
-                                        public: Anyone within your organization can access and find
-                                  </label>
-                                  <label class="radio line">
-                                        <input type="radio"  value="private" ng-model="account.access" />
-                                        private: only you and your collaborators
-                                  </label>
-                              </div>
+                              
                             
                           </div>
                           
