--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -63,10 +63,10 @@
                         
                         <div class="portlet-body left-sidebar" id="chats">
                           <div class="pic">
-                                     <img ng-hide="account.logo_img_id" alt="Zesty" class=" angel_image" data-id="126085" data-type="Startup" src="/static/img/default_company.png" data-hasqtip="2">
+                              <img alt="<%=account.name%>" ng-src="<%=imageSrc%>">
                          </div>  
                           <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
-                               <img src="/static/img/upload_logo.png">
+                                <img src="/static/img/upload_logo.png" >
                           </a>
                                         
                         </div>
