--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -148,7 +148,7 @@
         <div class="row margin-bottom-10">
           <div class="col-md-2" ng-mouseenter="showUpload= true" ng-mouseleave="showUpload = false">
               <div class="pic">
-                           <img ng-hide="account.logo_img_id" alt="Zesty" class=" angel_image" data-id="126085" data-type="Startup" src="/static/img/default_company.png" data-hasqtip="2">
+                           <img alt="<%=account.name%>" class=" angel_image" ng-src="<%=imageSrc%>">
                </div>  
                <a ng-show="showUpload"   ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
                  <img src="/static/img/upload_logo.png">
