styling account list page
Former-commit-id: 80dec9f37aad282a4bf815276c5302c157970606

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -279,7 +279,7 @@
                     height: '20px'
                 });
           </script>
-            <div class="col-md-3">
+            <div class="col-md-3 fixed-labelsCard">
             <div class="row">
               <div class="portlet cardElement labelsCard">
                 <div class="portlet-title">
