adding tags.attach api
Former-commit-id: fdd0214ddfcb8d8153167b18a8929b222fa03f30

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -190,7 +190,7 @@
 
             <div class="col-md-9">
              <div class="inner-cards-container waterfall" ng-hide="blankStateaccount">
-                <div droppable  ng-repeat="account in accounts" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(account)">
+                <div ng-repeat="account in accounts" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(account,$index)">
 
                 
                 <!-- 
