implementing tags.attach on contact
Former-commit-id: 93f7f3d2eb26544311f5c7708064e2aec73353d5

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -220,10 +220,13 @@
 </div>
 
 <script type="text/javascript">
+ $('#slimtest1').slimScroll({
+                    height: '20px'
+  });
   $("#select2_sample2").select2({
         placeholder: "Click to Select a label",
         allowClear: false
-    });
+  });
   var handleUniform = function () {
         if (!jQuery().uniform) {
             return;
@@ -239,10 +242,10 @@
         }
     }
     handleUniform();
-    $('.waterfall').waterfall({ 
-      colMinWidth: 200, 
-      defaultContainerWidth: 800,
-      autoresize: true
-    });
+   $('.waterfall').waterfall({ 
+        colMinWidth: 210, 
+        defaultContainerWidth: 800,
+        autoresize: true
+  });
 </script>
 
