--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -72,8 +72,8 @@
             <div class="head">
               <div class="pic">
                 <a href="/#/opportunities/show/<%= opportunity.id %>" class="startup-link" title="account.name">
-                  <img ng-hide="account.logo_img_id" alt="account.name" class="angel_image" src="/static/img/default_company.png" >
-                  <img ng-show="account.logo_img_id" alt="account.name" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                  <img ng-hide="opportunity.logo_img_id" alt="account.name" class="angel_image" src="/static/img/default_company.png" >
+                  <img ng-show="opportunity.logo_img_id" alt="account.name" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
               <div class="text">
@@ -129,7 +129,7 @@
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
-      <div class="col-md-9 inner-cards-container" ng-show="blankStateaccount">
+      <div class="col-md-9 inner-cards-container" ng-show="blankStateopportunity">
         <div  data-span="3" class="cardElement blankState" data-tablet="span6" data-desktop="span12">
           <div class="">
             <div class="blank_slate_arrow"></div>
