--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -202,8 +202,8 @@
         <div class="detailsSection">
           <div class="head">
             <div class="pic">
-                <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name"><img ng-hide="account.logo_img_id" alt="account.name" class="angel_image" src="/static/img/default_company.png" >
-                <img ng-show="account.logo_img_id" alt="account.name" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name"><img ng-hide="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                <img ng-show="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                 </a>
             </div>
             <div class="text">
