--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -63,7 +63,7 @@
                         
                         <div class="portlet-body left-sidebar" id="chats">
                           <div class="pic">
-                              <img alt="<%=account.name%>" ng-src="<%=imageSrc%>">
+                              <img alt="<%=account.name%>" ng-src="<%=imageSrc%>" class="img-responsive img-thumbnail">
                          </div>  
                           <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
                                 <img src="/static/img/upload_logo.png" >
@@ -125,10 +125,6 @@
                                       <div class="row">
                                         <form class="form-inline newLeadForm" role="form">
                                           <div class="form-group sm-group" style="">
-                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
-                                          </div>
-                                          <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
                                             <select ng-model="phone.type" class="form-control">
                                               <option value="home" selected="selected" >{{_('home')}}</option>
@@ -136,8 +132,11 @@
                                               <option>{{_('mobile')}}</option>
                                               <option>{{_('other')}}</option>
                                             </select>
+                                          </div>                                          
+                                          <div class="form-group sm-group" style="">
+                                            <label class="sr-only" for="exampleInputEmail2">Number</label>
+                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
                                           </div>
-                                          
                                            <button type="submit" ng-click="pushElement(phone,phones)" class="btn blue jfk-button jfk-button-action">Add</button>
                                             <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
                                         </form>
@@ -294,11 +293,11 @@
                           
                         </div>
                         <div class="portlet-body" id="chats">
-                                  <label class="radio line">
+                                  <label class="radio line inbox-label">
                                         <input type="radio" value="public" ng-model="account.access" />
                                         public: Anyone within your organization can access and find
                                   </label>
-                                  <label class="radio line">
+                                  <label class="radio line inbox-label">
                                         <input type="radio"  value="private" ng-model="account.access" />
                                         private: only you and your collaborators
                                   </label>
