--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
   <link href="static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="static/bootstrap3/plugins/bootstrap-colorpicker2/css/colorpicker.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
+<link href="//fonts.googleapis.com/css?family=Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&subset=latin" rel="stylesheet" type="text/css" />
+<link href="//fonts.googleapis.com/css?family=Exo+2:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin" rel="stylesheet" type="text/css" />
   <!-- END GLOBAL MANDATORY STYLES -->
 
   <link  rel="shortcut icon" href="favicon.ico" />
