--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -322,11 +322,11 @@
             </div>
             <div class="portlet-body" id="chats">
               <label class="radio line">
-                <input type="radio" value="public" ng-model="account.access" />
+                <input type="radio" value="public" ng-model="contact.access" />
                   public: Anyone within your organization can access and find
               </label>
               <label class="radio line">
-                <input type="radio"  value="private" ng-model="account.access" />
+                <input type="radio"  value="private" ng-model="contact.access" />
                 private: only you and your collaborators
               </label>
             </div>
