finishing account list
Former-commit-id: 90fb029fbdbc34cbc46ab390df817aa05c270648

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -150,7 +150,7 @@
           
             
                     <a href="/#/accounts/new" class="btn red newBtn">
-                    {{ _("New Account") }} <i class="icon-plus"></i>
+                    {{ _("New Account") }} 
                     </a>
                
           <!-- <div class="pagination pull-right" >
