--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -147,7 +147,7 @@
             <div class="row margin-bottom-10">
           <div class="col-md-2" ng-mouseenter="showUpload= true" ng-mouseleave="showUpload = false">
               <div class="pic">
-                           <img alt="<%=account.name%>" class=" angel_image" ng-src="<%=imageSrc%>">
+                           <img alt="<%=account.name%>" class=" img-responsive img-thumbnail" ng-src="<%=imageSrc%>">
                </div>  
                <a ng-show="showUpload" ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
                  <img src="/static/img/upload_logo.png">
@@ -411,7 +411,7 @@
                                     <div class="detailsSection">
                                       <div class="head">
                                         <div class="pic">
-                                            <a href="/#/contact/show/<%= contact.id %>" class="startup-link" title="contact.firstname"><img ng-hide="contact.logo_img_id" alt="contact.firstname" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                                            <a href="/#/contact/show/<%= contact.id %>" class="startup-link" title="contact.firstname"><img ng-hide="account.logo_img_id" alt="contact.firstname" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
                                             <img ng-show="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                                             </a>
                                         </div>
@@ -542,18 +542,102 @@
                           <div class="col-md-12">
                             <div class="row">
                               <!-- ngRepeat: opp in opportunities -->
-                        <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
-                         <div class="dashboard-stat cards">
-                  
-                  
-                              <div class="blank_slate_arrow"></div>
-                            <div class="thumbnail blank_slate_body">
-                                  <img src="/static/img/opportunities_blank.png" class="img-responsive">
-                                    <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
-                             </div>                               
-                           </div>
-                         </div>
-                         <div class="clearfix"></div>
+                               <div class="col-md-12 waterfall3" ng-hide="blankStateaccount">
+                                  <div  ng-repeat="contact in contacts" data-column="<%=getPosition($index)%>" class="rightcards cardElement"  ng-class="{rightcards: getPosition($index)==4}">
+                                          <div class="detailsSection">
+                                            <div class="head">
+                                              <!--<div class="pic">
+                                                  <a href="/#/needs/show/<%= need.id %>" class="startup-link" title="need.name"><img ng-hide="" alt="contact.firstname" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                                                  <img ng-show="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                                                  </a>
+                                              </div>
+                                              <div class="text">
+                                                  <div class="name"><a href="/#/contact/show/<%= contact.id %>" class="profile-link" data-id="126085" data-type="Startup"><%= contact.firstname %> <%= contact.lastname %></a></div>
+                                                   <div class="pitch">
+                                                      <span  ng-show="contact.account_type">
+                                                        <a href="/#/search/type:contact <%=contact.title%>"> #<%= contact.title %></a>
+                                                      </span> 
+                                                    </div>
+                                              </div>
+                                              <div class="clearfix"></div>-->
+                                                <div class="row">
+                                                  <div class="col-md-2 col-sm-2 col-xs-12 hidden-xs">
+                                                    <div easypiechart class="chart" options="chartOptions" percent="percent">
+                                                      <span class="percent" ng-bind="percent"></span>
+                                                    </div>
+                                                  </div>
+                                                  <div class="col-md-7 col-sm-7 col-xs-12" style="border-left: 1px solid rgb(218, 218, 218);">
+                                                    <div class="row">
+                                                      <div class="col-md-3 col-sm-3 col-xs-6 col-xs-offset-3 oppAccount">
+                                                          <div class="pic">
+                                                                       <img alt="test" class="img-responsive img-thumbnail" ng-src="/static/img/default_company.png" src="/static/img/default_company.png">
+                                                           </div>
+                                                      </div>
+                                                      <div class="col-md-9 col-sm-9 col-xs-12">
+                                                        <div class="oppDescription">
+                                                          <h3>
+                                                            <a href="">LCD Screen cleaning kit LCD Screen cleaning kit</a>
+                                                          </h3>
+                                                          <span class="accountName">
+                                                            NearBee
+                                                          </span>
+                                                          <span class="industry">
+                                                            Engineering
+                                                          </span>                                           
+                                                          <p class="description ellipsis">
+                                                              I can help will basic and advanced questions pertaining to:
+                                                              Slope/derivatives, Variation, Rational Expressions, Polynomials, Geometric Proofs, Conic Sections, Rational Expressions, Radicals, Factoring, Solving Quadratics, Functions, Absolute Value Equations, Inequalities, Systems of Equations, etc
+
+                                                                Completion of a pre-helpout survey is required and must be completed at least 2 hours before 
+                                                                <i></i>
+                                                          </p>
+
+                                                        </div>
+                                                        
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                  <div class="visible-xs col-xs-6">
+                                                    <div easypiechart class="chart" options="chartOptions" percent="percent">
+                                                      <span class="percent" ng-bind="percent"></span>
+                                                    </div>
+                                                  </div>
+                                                  <div class="col-md-3 col-sm-3 col-xs-6">
+                                                      <div class="oppPrice">
+                                                        $1500.00
+                                                      </div>
+                                                      <div class="oppStage">
+                                                        Close Won
+                                                      </div>
+                                                      <div class="oppEstDate">
+                                                        Estimated close date
+                                                        Apr 23, 2014 at 6:00PM 
+                                                      </div>
+
+                                                  </div>
+                                                </div>   
+                                            </div>
+                                          </div>
+                                          <div class="tagsSection" ng-class="{hidden: contact.tags==null}">
+                                              <div class="sectionContent">
+                                                   <a ng-repeat="tag in contact.tags" href="/#/search/type:contact tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                                                   </a>
+                                              </div>
+                                          </div>
+                                  </div>
+                              </div>
+                              <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
+                               <div class="dashboard-stat cards">
+                        
+                        
+                                    <div class="blank_slate_arrow"></div>
+                                  <div class="thumbnail blank_slate_body">
+                                        <img src="/static/img/opportunities_blank.png" class="img-responsive">
+                                          <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
+                                   </div>                               
+                                 </div>
+                               </div>
+                               <div class="clearfix"></div>
                               </div>
                               </div>
                             </div>
@@ -638,9 +722,21 @@
                                     <i class="icon-angle-down"></i>
                                     </a>
                                     <ul class="dropdown-menu">
-                                      <li><a ng-click="showCreateDocument('document')" href="#" data-toggle="modal"> Document</a></li>
-                                      <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal">Presentation</a></li>
-                                      <li><a ng-click="showCreateDocument('spreadsheet')" href="#" data-toggle="modal"> Spreadsheet</a></li>
+                                      <li><a ng-click="showCreateDocument('document')" href="#" data-toggle="modal"> 
+                                           <img src="/static/img/google_drive/text/plain.png" class="">
+                                          Document
+                                          </a>
+                                      </li>
+                                      <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal">
+                                           <img src="/static/img/google_drive/presentation.png" class="">
+                                          Presentation
+                                          </a>
+                                      </li>
+                                      <li><a ng-click="showCreateDocument('spreadsheet')" href="#" data-toggle="modal">
+                                           <img src="/static/img/google_drive/spreadsheet.png" class="">
+                                          Spreadsheet
+                                          </a>
+                                      </li>
                                      
                                     </ul>
                                 </div>
@@ -659,12 +755,12 @@
                                           <div class="detailsSection">
                                             <div class="head">
                                               <div class="pic">
-                                                  <a href="/#/documents/show/<%= attachment.id %>" class="startup-link" title="attachment.title"><img ng-hide="" alt="attachment.title" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                                                  <a href="/#/documents/show/<%= attachment.id %>" class="startup-link" title="attachment.title">
                                                   <img ng-show="account.logo_img_id" alt="account.name" class="google-drive-icon img-responsive img-thumbnail" ng-src="/static/img/google_drive/<%=attachment.mimeType%>.png" >
                                                   </a>
                                               </div>
                                               <div class="text">
-                                                  <div class="name"><a href="/#/documents/show/<%= attachment.id %>" class="profile-link" ><%=attachment.title%></a></div>
+                                                  <div class="name"><a href="/#/documents/show/<%= attachment.id %>"title="<%=attachment.title%>" class="profile-link" ><span><%=attachment.title%></span></a></div>
                                                    <div class="pitch">
                                                       <span  ng-show="contact.account_type">
                                                         <a href="/#/search/type:contact <%=contact.title%>"> #<%= contact.title %></a>
@@ -675,8 +771,10 @@
                                             </div>
                                           </div>
                                        </div>
-                                   <!--blank stat-->
-                                  <div ng-show="blankStatdocuments" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                                   <!--blank stat-->                                 
+                                  <div class="clearfix"></div>         
+                              </div><!--/inner-cards-container-->
+                               <div ng-show="blankStatdocuments" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                                        <div class="dashboard-stat cards">
                                            <div class="blank_slate_arrow"></div>
                                            <div class=" thumbnail blank_slate_body">
@@ -685,8 +783,6 @@
                                            </div>                               
                                        </div>
                                    </div>
-                                  <div class="clearfix"></div>         
-                              </div><!--/inner-cards-container-->
                               </div>
                            
                               </div>
@@ -1427,6 +1523,62 @@
            </div>
        </div>
     <!--End Contact Modal -->
+     <!--HKA 19.11.2013 Opportunity Modal -->
+
+              <div id="addOpportunityModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+              <div class="modal-content">
+                 <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                     <h3 id="myModalLabel" class="modal-title">{{_("New Opportunity")}}</h3>
+                  </div>
+                 <div class="modal-body">
+                     <form id="addOpportunity" name="addOpportunity" ng-submit="saveOpp(opportunity)" class="form-horizontal"> 
+                     <fieldset>
+                      <div class="form-group">
+                          <label  class="required col-md-3 control-label">{{_("Name")}} *</label>
+                       
+                          <div class="col-md-9">
+                          <input type="text" class="form-control" required id="id_name" ng-model="opportunity.name">
+                          </div>
+                      </div>
+                      <!--div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
+                       
+                        <div class="col-md-9">
+                          <input type="text"  class="form-control" id="id_label" ng-model="opportunity.description">
+                        </div>
+                      </div-->
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Amount")}} </label>
+                        <div class="col-md-9">
+                          <input type="text"  class="form-control" id="id_amount" ng-model="opportunity.amount">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="required col-md-3 control-label">{{_("Stage")}} </label>
+                        <div class="col-md-9">
+                          <select ng-model="stage_selected" class="form-control" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages | orderBy: 'name':true"  >
+                            <option value="">-- choose Stage --</option>
+                          
+                          </select>
+                          
+                         
+                        </div>
+                    </div>                 
+                    </fieldset>
+                
+              </div>
+                    <div class="modal-footer">
+                     <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                      <button  type="submit" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
+                     </div>
+                   </form>
+                   </div>
+                   </div>
+          </div>
+
+                <!--HKA 19.11.2013 End Of Opportunity Modal -->
 <script type="text/javascript">
   $(function() {
     $('#datetimepicker2').datetimepicker({
@@ -1456,7 +1608,6 @@
         }
       };
  /* $('body').popover({ selector: '[data-popover]', trigger: 'click hover', placement: 'left', delay: {show: 50, hide: 400}});*/
- 
           $('#assigeeList').slimScroll({
               height: '200px'
           });
