--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
    <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date.css"/>
    <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date-default-theme.css"/>
    <link rel="stylesheet" href="static/css/datetimepicker.css"/>
+   <link href="static/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
 
@@ -528,6 +529,7 @@
   <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyCqpqK8oOc4PUe77_nNYNvzh9xhTWd_gJk&sensor=true" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
+  <script src="static/plugins/jquery-easy-pie-chart/angular.easypiechart.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/1.1.0/annyang.min.js"></script>
