--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -249,7 +249,7 @@
                           <input type="text" required id="id_name" class="form-control" ng-model="opportunity.amount">
                        </div>
                        
-                        <!--div class="col-md-9">
+                        <div class="col-md-9">
                         <div class="row">
                           <div class="col-md-3 inline-div">
                               <select  class="form-control" ng-model="opportunity.currency">
@@ -343,7 +343,7 @@
                         </div>
                          
                           
-                        </div--> 
+                        </div>
                         
                     </div>
                     <div class="form-group">
