--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1280,7 +1280,7 @@
                 <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                   
-                  <input  ng-click="deleteaccount(account)" type="submit" class="btn red" value="Delete this Account">
+                  <input  ng-click="deleteaccount()" type="submit" class="btn red" value="Delete this Account">
                   <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                 </div>
             </form>
