--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -279,16 +279,20 @@
                           <h3>Story</h3>
                           <div class="news-block-tags">
                             <strong>Tagline </strong>
+                            
                             <span class="page-meta">
                               <i class="icon-pencil"><a ng-click="edittagline()" class="btn-link addAnotherPhone" data-toggle="modal"> Edit </a></i>
                             </span>
+                            <p><%=account.tagline %></p>
                           </div>
                           <p class="ng-binding"> </p>
                           <div class="news-block-tags">
                             <strong>Introduction</strong>
+                            
                             <span class="page-meta"><i class="icon-pencil">
                               <a ng-click="editintro()" class="btn-link addAnotherPhone" data-toggle="modal"> Edit </a></i>
                             </span>
+                              <p><%=account.introduction %></p>
                           </div>
                           <p class="ng-binding"></p>                         
                         </div>
