--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         
-        <div ng-show="isFiltering * !leads" data-span="all" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+        <div ng-show="isFiltering * !leads" data-span="all" class="" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
