finishinf style of contact list page
Former-commit-id: f7c7d6ab6a9826e773e1cb257ffb2dbf9c6566dd

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -443,8 +443,7 @@
                                                   <div class="col-md-2 col-sm-2 col-xs-12 hidden-xs">
                                                     <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability">
 
-                                                      <span class="percent" ng-bind="" > 
-                                                        <%=opportunity.current_stage.probability%>
+                                                      <span class="percent" ng-bind="percent=<%=opportunity.current_stage.probability%>" > 
                                                       </span>
                                                     </div>
                                                   </div>
