--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -56,34 +56,33 @@
         </span>
     </div>
   </div>
-  <div ng-show="isSignedIn">  
+  <div ng-show="isSignedIn" class="row">  
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-    <div class="row">
-      <div class="col-md-3" > 
-        <div class="btn-group">
-          <a class="btn red" href="/#/contacts/new" >
-            <i class="icon-plus"></i> 
+    <div class="col-md-9" > 
+        <div class="btn-group newBtn">
+          <a class="btn red " href="/#/contacts/new" >
             {{ _("New Contact") }}
           </a>
         </div>
-        <div class="btn-group">
+        <div class="btn-group newBtn">
           <button  ng-click="showImportModal()" id="sample_editable_1_new" class="btn red">
             <i class="icon-upload-alt"></i>
           </button>
         </div>
-      </div>
     </div>
-    <div class="row cards-container">
-      <div class="">
-        <div class="col-md-9 inner-cards-container waterfall" ng-hide="blankStateaccount">
-          <div ng-repeat="contact in contacts" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(contact,$index)">
+    <div class="col-md-9">
+     <div class="row">
+      <div class="tab-pane">
+      <div class="row">
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
+          <div ng-repeat="contact in contacts" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(contact,$index)">
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
                   <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
-                    <img ng-hide="account.logo_img_id" alt="account.name" class="angel_image" src="/static/img/default_company.png" >
-                    <img ng-show="account.logo_img_id" alt="account.name" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                    <img ng-hide="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
+                    <img ng-show="account.logo_img_id" alt="account.name" class="img-responsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                   </a>
                 </div>
                 <div class="text">
@@ -121,18 +120,7 @@
               </div>
             </div>
           </div>
-          <div ng-show="blankStatecontact" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
-            <div class="dashboard-stat cards">
-              <div class="blank_slate_arrow"></div>
-                <div class="thumbnail blank_slate_body">
-                  <img class="img-responsive" src="/static/img/contacts_blank.png">
-                    <p class="lead">
-                      {{ _('Each contact gets a page in i/oGrow. You and your co-workers can add notes from calls,conversations, meetings, or any other historic information about this person.') }}
-                    </p>
-                </div>
-            </div>
-          </div>
-          <div ng-show="isFiltering * !contacts" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+          <div ng-show="isFiltering * !contacts" data-span="all" class="" data-tablet="span6" data-desktop="span12">
             <div class="dashboard-stat cards">
               <div class="blank_slate_arrow"></div>
               <div class="thumbnail blank_slate_body">
@@ -143,8 +131,8 @@
           <div class="clearfix"></div>
         </div><!--innercardcontaine-->
         <!--$Blank state-->
-        <div class="col-md-9 inner-cards-container" ng-show="blankStatecontact">
-          <div  data-span="3" class="cardElement blankState" data-tablet="span6" data-desktop="span12">
+        <div class="col-md-12" ng-show="blankStatecontact">
+          <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
             <div class="">
               <div class="blank_slate_arrow"></div>
               <div class="thumbnail blank_slate_body">
@@ -158,9 +146,13 @@
           <div class="clearfix"></div>
         </div><!--/inner-cards-container-->
       </div>
-    <div class="col-md-3 fixed-labelsCard">
+    </div>
+    </div>
+  </div>
+      <div class="col-md-3 fixed-labelsCard">
       <div class="row">
-        <div class="portlet cardElement labelsCard">
+      <div class="col-md-12">
+        <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
                     <!-- class="fa fa-reorder"--><i></i>Labels
@@ -214,8 +206,8 @@
           </div>
         </div>
       </div>
+      </div>
     </div>
-  </div>
       <!-- END PAGE CONTAINER--> 
 </div>
 
