adding more details on opportuinities.insert api
Former-commit-id: 3323900aa18f50ccab436c2db1d5969f5f295ff6

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -198,7 +198,7 @@
            
             
 
-           <span class="opportunity-amount" >$<%=opportunity.amount %>  </span><span>
+           <span class="opportunity-amount" ><%=opportunity.amount_total %>  </span><span>
            <span ng-show="opportunity.contact_name">{{_("associated with")}}: <a class="tag" href="/#/search/type:Opportunity <%=opportunity.contact_name %>">#<%=opportunity.contact_name %></a> from <a class="tag" ng-show="opportunity.account_name" href="/#/search/type:Opportunity <%=opportunity.contact_name %>">#<%=opportunity.account_name %></a></span>
             <span ng-show="opportunity.account" >{{_("associated with")}}:  <a class="tag" href="/#/accounts/show/<%=opportunity.account.id %>">#<%=opportunity.account.name %></a></span>
            
