fixing change apps bug #298
Former-commit-id: 871090f8fda3f0ec8e9b9c637698f6f8659536fd

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
                        {%for application in apps %}
                        {%if application.key !=active_app.key %}
                         <li class="gb_a">
-                          <a href="/apps/{{ application.id }}">
+                          <a href="/apps/{{ application.key.id() }}">
                           <span class="task">
                             <span class="desc">
                                <img class="platform_icons" height="50" width="50" src="static/img/admin_console.png">
