pull from iogrow redesign team page
Former-commit-id: 54a4823dfeb445ddcd4d2cffc2d28d7bf8c1fd88

--- a/templates/base.html
+++ b/templates/base.html
@@ -379,10 +379,10 @@
 
 
 
-      var ROOT = '/_ah/api';
+      //var ROOT = '/_ah/api';
 
 
-   // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
