--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -149,7 +149,7 @@
       <div class="tab-pane">
       <div class="row">
         <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
-          <div ng-repeat="account in accounts" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(account,$index)">
+          <div ng-repeat="account in accounts"  droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(account,$index)">
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
