--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -71,7 +71,7 @@
     <div class="tab-pane">
     <div class="row ">
       <div class="col-md-12 waterfall" ng-hide="blankStatelead">
-        <div ng-repeat="lead in leads" droppable ng-class="{rightcards: getPosition($index)==4}" data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
+        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
