fixing a bug on opportunities.delete
Former-commit-id: fe775678883b8ccbda3ca00e5cf7aa13ccad31cb

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -247,7 +247,7 @@
 
                        
                        <div class="col-md-9">
-                          <input type="text" required id="id_name" class="form-control" ng-model="opportunity.amount">
+                          <input type="text" required id="id_name" class="form-control" ng-model="opportunity.amount_total">
                        </div>
                        
                         <div class="col-md-9">
