working on cases/new page
Former-commit-id: d87fef33ae25dedfd9ebd08baa70fe054423f513

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -59,9 +59,9 @@
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
     <div class="col-md-9"> 
-        <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
-          {{ _("New Case") }} 
-        </button> 
+        <a href="/#/cases/new" class="btn red newBtn">
+                    {{ _("New Case") }} 
+        </a>
     </div>
     <div class="col-md-9">
      <div class="row">
