slim form css on all object
Former-commit-id: b12a7d9aa23ea2c92bca0e00127bb3e519dbcc13

--- a/templates/cases/case_new.html
+++ b/templates/cases/case_new.html
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="row" >
-    <div class="showPage newPage col-md-9">
+    <div class="showPage slimForm col-md-9">
       <div class="row">
         <div class="col-md-12">
           <div class="row">
