--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -216,8 +216,8 @@
                 </div>
                 <!-- $ about tab -->
                 <div class="tab-pane active" id="tab_1_2" ng-show="selectedTab == 2">
-                  <div class="row">
-                    <div class="col-md-6">
+                  <div class="row slimForm">
+                    <div class="col-md-6 ">
                       <div class="news-blocks blank-card blank-card-yellow newsCard">
                         <h3>Account Informations</h3>
                         <div class="news-block-tags">
@@ -258,7 +258,7 @@
                                           <form class="form-inline newLeadForm" role="form">
                                             <div class="form-group lg-group" style="">
                                               <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a number">
+                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter an email">
                                             </div>
                                              <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email,emails)" >Add</button>
                                               <button type="submit" ng-click="showEmailForm=false" class="btn btn-default">X</button>
