--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="row" >
-    <div class="showPage newPage col-md-9">
+    <div class="showPage slimForm col-md-9">
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -100,7 +100,7 @@
               </div>
             </div>
             <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 ">
               <div class="news-blocks blank-card blank-card-yellow">
                 <h3>Contact Informations</h3>
                 <div class="news-block-tags">
@@ -108,7 +108,7 @@
                 </div>
                 <ul class="list-unstyled contact-infos">
                   <li ng-show="showPhoneForm">
-                    <div class="row">
+                    <div class="row ">
                       <form class="form-inline newLeadForm" role="form">
                         <div class="form-group sm-group" style="">
                           <label class="sr-only" for="exampleInputEmail2">Number</label>
